--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "peerjs": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0"
