--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
